# lbot

./: Cargo.toml  README.md  config.toml
src/: config.rs  evaluation.rs  features.rs  main.rs  persistence.rs  runtime.rs  scoring.rs  signals.rs  state.rs  types.rs
src/paper_trading/: mod.rs
src/sources/: binance.rs  bybit.rs  dydx.rs  mod.rs  okx.rs
